# wdi-experiments

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/streamlit/: lab.py  wdi_country_region_code.csv
docs/source/: api.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.rst  streamlit.rst
src/wdi_experiments/: __init__.py  cli.py  indicators.py  main.py  wdi_client.py
tests/: test_main.py
